--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<!-- Title for page -->
+    	<!-- title for page -->
         <title>About Us | Starlight Children's Foundation</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
